# Gaia-LAS

./: .gitignore  AGENTS.md  CLAUDE.md  GITHUB_SETUP.md  LICENSE  README.md  REVIEW_GUIDE.md  app.py  config.example.json  config.review.example.json  pyproject.toml  requirements.txt
docs/: CONTEXT_COMPILER.md  E2E_VALIDATION.md  LAUNCHER_WINDOW_FIX_REPORT.md  OPTIMIZATION_PLAN.md  PROTECTION_PIPELINE.md  RUNTIME_DIAGNOSTIC.md  SECURITY_STORAGE_POLICY.md  STORAGE_MODEL.md  USER_INTERFACE.md  VEIL_REVIEW_FILE_PICKER_FIX_REPORT.md
gaia/: __init__.py  archive.py  config.py  context_compiler.py  controlled_intake.py  conversations.py  excel_preview.py  extraction.py  gaia_window.js  jobs.py  launchers.py  local_benchmark.py  local_llm.py  lore_assist.py  lore_rerank.py  masking.py  memory.py  models.py  module_assist.py  orchestrator.py  packaging.py  policy.py  profiles.py  projects.py  protection.py  provenance.py  rebuild.py  review.py  runtime.py  scribe.py  scribe_inbox.py  server.py  storage.py  transcription.py  ui.py
tests/: test_api_contracts.py  test_archive_retention.py  test_config_contract.py  test_context_compiler.py  test_controlled_intake.py  test_conversations.py  test_e2e_validation.py  test_excel_preview.py  test_external_imports.py  test_jobs.py  test_launchers.py  test_local_benchmark.py  test_local_review.py  test_local_status.py  test_lore_assist.py  test_lore_rerank.py  test_masking.py  test_memory_index.py  test_module_assist.py  test_packaging.py  test_policy.py  test_profiles.py  test_project_registry.py  test_protection.py  test_scribe.py  (+9 more)
(+8 files in other folders)
